Fix: language css fixed bug, modified scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -13,38 +13,27 @@
   justify-content: flex-start;
   align-items: center;
 }
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+::-webkit-scrollbar-corner {
+  /* background: rgba(0, 0, 0, 0.5); */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #311b92;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
 }
 
-.card {
-  padding: 2em;
+*::-webkit-scrollbar-track {
+  background: #f5f5f5;
 }
 
-.read-the-docs {
-  color: #888;
-} */
+*::-webkit-scrollbar-thumb {
+  background-color: #311b92;
+  border-radius: 20px;
+  border: 3px solid #311b92;
+}
