--- a/src/components/LanguageSelector/language-selector.scss
+++ b/src/components/LanguageSelector/language-selector.scss
@@ -1,9 +1,14 @@
 @import "../../styles/variables.scss";
-.css-ece9u5 {
+.language {
+  height: auto;
+  width: auto;
+  background-color: #f5f5f5;
   position: fixed;
   bottom: 10px;
   left: 10px;
   z-index: 20;
+}
+.css-ece9u5 {
 }
 .css-1nrlq1o-MuiFormControl-root {
   min-width: 80px;
